src/main/java/com/example/lottery/Util/error/StorageException.java
package com.example.lottery.Util.error;

public class StorageException extends Exception{
    public StorageException(String message) {
        super(message);
    }

}
